# herb

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/rs-server/: .gitignore  Cargo.toml
apps/rs-server/src/: main.rs
apps/rs-server/src/db/: error.rs  mod.rs  room.rs  store.rs  user.rs
apps/rs-server/src/net/: http.rs  mod.rs  ws.rs
apps/server/: bundle.json  creators.json  herb-config.json  package.json
apps/server/hdata/: 000014.ldb  000034.ldb  LOG  LOG.old  MANIFEST-000031
apps/server/src/: assets.ts  config.ts  creators.ts  db.ts  index.ts  room.ts  server.ts  upload.ts  useAsset.ts  useCors.ts  useCreators.ts  useDb.ts  useFileUpload.ts  useSetup.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  module.d.ts
apps/web/src/common/: index.ts  state.ts  string.ts  theme.css.ts  types.ts  utils.ts
apps/web/src/hooks/: default_store.ts  index.tsx  useAssetHandler.ts  useAssets.ts  useBackup.ts  useChat.tsx  useContentHandler.ts  useCreator.ts  useCustomUpdates.ts  useGlobalInfo.ts  useInsertFile.ts  useInsertJson.ts  useInsertPdf.ts  useRoll.ts  useRoomInfo.ts  useTldrawData.ts  useUiOverride.ts  useUiOverride.tsx  useYjsStore.ts
apps/web/src/shapes/: CardShape.tsx  CardStackBack.tsx  CardStackPool.tsx  CardStackSettings.tsx  CardStackShape.tsx  CustomShape.tsx  DiceRollerPool.tsx  DiceRollerShape.tsx  DiceShape.tsx  GenList.tsx  GeneratorShape.tsx  HiddenShape.tsx  MarkdownSettings.tsx  MarkdownShape.tsx  PbtaInfo.tsx  PdfContent.tsx  PdfShape.tsx  index.tsx  (+11 more)
deploy/: index.js  package-lock.json  package.json
(+48 files in other folders)
