[package]
name = "rs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
lmdb-rs = "0.7.6"
rusqlite = { version = "0.30.0", features = ["bundled-full"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.3.6"
y-sync = "0.4.0"
yrs = "0.17.2"
yrs-kvstore = "0.2.0"
yrs-lmdb = "0.2.0"
yrs-warp = "0.7.0"
